--- a/index.html
+++ b/index.html
@@ -47,6 +47,30 @@
                 <button class="s3-btn2 btn2">next</button>
             </section>
         </div>
+        <div class="slide4 slide">
+            <section class="s4-sec3">
+                <button class="s4-btn1 btn1">Log In</button>
+                <button class="s4-btn2 btn2">Create Account</button>
+            </section>
+        </div>
+        <div class="slide5 slide">
+            <section class="s5-sec1">
+                <i class="far fa-user"></i>
+                <form>
+                    <input type="email" placeholder="Email Address">
+                    <input type="password" placeholder="Password">
+                </form>
+            </section>
+            <section class="s5-sec2">
+                <button class="s5-btn1 btn1">Log In</button>
+                <p class="forget"><a>forget password</a></p>
+                <div class="icons">
+                    <a><i class="fab fa-facebook"></i></a>
+                    <a><i class="fab fa-google"></i></a>
+                </div>
+                <p class="last-p">Don't have an account? <a>Sign Up</a></p>
+            </section>
+        </div>
 <!--        <div class="slide"></div>-->
 <!--        <div class="slide"></div>-->
     </div>
