add slide 7 & footer

--- a/index.html
+++ b/index.html
@@ -71,11 +71,92 @@
                 <p class="last-p">Don't have an account? <a>Sign Up</a></p>
             </section>
         </div>
-<!--        <div class="slide"></div>-->
-<!--        <div class="slide"></div>-->
+        <div class="slide6 slide">
+            <section class="s6-sec1">
+                <p>Access Required</p>
+                <div>
+                    <button><i class="fab fa-google"> &nbsp;</i> Google Fit</button>
+                    <button><i class="fas fa-map-marker-alt">&nbsp;&nbsp;&nbsp;&nbsp;</i>Location</button>
+                </div>
+            </section>
+            <section class="s6-sec2">
+                <button class="btn1">Grant Permission</button>
+                <p class="forget"><a>More Information</a></p>
+            </section>
+        </div>
+        <div class="slide7 slide">
+            <div class="items">
+                <div class="s6-items">
+                    <div class="item">
+                        <i class="fab fa-airbnb"></i>
+                        <h2>1400</h2>
+                        <p>Steps</p>
+                    </div>
+                    <div class="item">
+                        <i class="fab fa-angellist"></i>
+                        <h2>98</h2>
+                        <p>Tap</p>
+                    </div>
+                    <div class="item">
+                        <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
+                        <h2>20</h2>
+                        <p>Shake</p>
+                    </div>
+                </div>
+                <div class="s6-items">
+                    <div class="item">
+                        <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
+                        <h2>560</h2>
+                        <p>Distance</p>
+                    </div>
+                    <div class="item">
+                        <i class="fal fa-tag"></i>
+                        <h2>140</h2>
+                        <p>Calories</p>
+                    </div>
+                    <div class="item">
+                        <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
+                        <h2>0/1</h2>
+                        <p>Reward</p>
+                    </div>
+                </div>
+                <div class="s2-items-last">
+                    <h3>LEVEL 2!</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="footer-item">
+                    <a class="fas fa-home"></a>
+                    <p>Home</p>
+                </div>
+                <div class="footer-item">
+                    <a class="fas fa-users"></a>
+                    <p>Friends</p>
+                </div>
+                <div class="footer-item">
+                    <i class="fas fa-shopping-bag"></i>
+                    <p>Shop</p>
+                </div>
+                <div class="footer-item">
+                    <a class="fas fa-align-left"></a>
+                    <p>field</p>
+                </div>
+                <div class="footer-item">
+                    <a class="fas fa-user-circle"></a>
+                    <p>profile</p>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="left-slide"><i class="fa fa-chevron-left" aria-hidden="true"></i></div>
     <div class="right-slide"><i class="fa fa-chevron-right" aria-hidden="true"></i></div>
+    <footer>
+        <i class="fas fa-home"></i>
+        <i class="fas fa-comment-alt"></i>
+        <i class="fas fa-ellipsis-h"></i>
+    </footer>
 </section>
 <script src="index.js"></script>
 </body>
